@@ -87,6 +87,7 @@ t/callback_invalid_sv.t
 t/export_ref.t
 t/js2perl.t
 t/js_func_to_perl.t
+t/jsfunc_memory_handling.t
 t/module.t
 t/regexp.t
 t/set_globals.t
