@@ -1,8 +1,13 @@
 Revision history for Perl extension JavaScript::QuickJS:
 
 0.11
-- JavaScript Functions converted to Perl now become instances of a new
-  class, JavaScript::QuickJS::Function.
+- BREAKING CHANGE: JavaScript Functions converted to Perl now become
+  instances of a new class, JavaScript::QuickJS::Function. That class
+  is overloaded to act as a coderef, so MOST calling code should still
+  work, but anything that expects a CODE reference will now instead find
+  a blessed object. The benefit here is twofold: 1) It’s easier to avoid
+  memory cycles, and 2) Perl can now inspect a JavaScript function
+  directly.
 - Add missing regexp test.
 
 0.10 Thu 12 May 2022
